# LogTender

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: backend-tests.yml
backend/: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5b91174760ea_baseline.py  6517635ca329_baseline.py  b6a83d1e2f74_harden_attendance_and_pin_resets.py
backend/app/: config.py  crud.py  database.py  enums.py  main.py  models.py  schemas.py
backend/app/api/: router.py
backend/app/api/routes/: guardians.py  health.py  pin_resets.py  students.py
backend/app/tests/: conftest.py  factories.py  test_attendance_crud.py  test_attendance_notes_crud.py  test_crud.py  test_database_config.py  test_guardian_pin_resets_crud.py  test_students_guardians_crud.py  test_users_crud.py
